tests/compile-fail/integration__integration__strings__encoding_error_in_arg.snap
---
source: tests/integration/strings.rs
expression: stderr
---
error: string encoding error
   ┌─ <input>:14:21
   │
14 │       textSet(0, 0, "⏄");
   │                     ^^^ cannot be encoded using 'Shift_JIS'


